# race-track-engine

./: CMakeLists.txt  flake.nix  makefile  readme  readme.md
shaders/: fragment.glsl
src/: main.c  shader.c  shader.h
